@@ -3,7 +3,6 @@ plugins {
     id 'net.fabricmc.fabric-loom'
     id "com.modrinth.minotaur" version "2.+"
     id 'idea'
-    id 'java-library'
 }
 
 repositories {
@@ -28,28 +27,7 @@ modrinth {
         incompatible.project "moonrise-opt"
         incompatible.project "open-parties-and-claims"
     }
-    changelog = """## 🦎 New Mod Update 🦎
-
-### ⚡ Performance
-- Portals optimization
-- Spawn and despawn optimization
-- Switched to batch entity ticking system
-
-### ✨ New
-- Update config
-- Update statistics
-- Added command permissions
-- Added OpenPartiesAndClaims as incompatible mod
-- Added synchronization of incompatible mods (Create, Fowlplay)
-
-### 🐛 Bug Fixes
-- Fixed deadlocks *~~again~~*
-- Fixed bugs with riding entity
-- Fixed bugs with entity effects
-- Fixed door interaction logic for villagers
-- `BrainMixin` rewritten with snapshot-based memory reads
-- Disabled Lithium `mixin.ai.task.memory_change_counting`
-- `ChunkHolderMixin`, `LevelTicksMixin`, `EntitySectionMixin` synchronization improved
+    changelog = """
 """
 }
 
@@ -75,9 +53,9 @@ loom {
     if (aw.exists()) {
         accessWidenerPath.set(aw)
     }
-//    mixin {
-//        defaultRefmapName.set("async.refmap.json")
-//    }
+    mixin {
+        useLegacyMixinAp = false
+    }
     runs {
         client {
             client()
@@ -95,7 +73,6 @@ loom {
                     "-Xmx12G",
                     "-XX:+UnlockExperimentalVMOptions",
                     "-XX:+UseZGC",
-                    "-XX:+ZGenerational",
                     "-XX:+AlwaysPreTouch",
                     "-XX:+DisableExplicitGC",
                     "-XX:+UseDynamicNumberOfGCThreads"
